# ros2_gazebo_docker_farm

./: .gitignore  Dockerfile  README.md  frames_2025-07-03_16.02.49.gv
farm_inspection/: CMakeLists.txt
moray_assets/farm_inspection/: CMakeLists.txt  package.xml
moray_assets/farm_inspection/launch/: gazebo_with_bridge.launch.py
moray_assets/farm_inspection/models/: building_robot.sdf
moray_assets/farm_inspection/scripts/: Robot_mission.py
moray_assets/farm_inspection/src/: lidar_node.cc
moray_assets/farm_inspection/world/: farm_world.sdf
